# mc-ocr

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  a_images.py  compose.yml  crop.sh  cut.html  data.py  docker-compose.yml  ffg_image_cutter.py  hash-app.py  image_cutter.py  index.html  index_old.html  main.py  pyproject.toml  requirements.txt  result.txt  status.html  utils.py
.devcontainer/: devcontainer.json
jsons/: cards.json  cards_all_2023-11-28.json  cards_all_2025-11-11.json
